// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays the correct icon 1`] = `
.c6 {
  display: inline-block;
}

.c5 {
  display: inline-block;
  text-align: center;
  padding: 10px 1em;
  font-weight: normal;
  background-color: #ea232d;
  border: none;
  color: #fff;
  width: 100%;
}

.c5:hover {
  color: #fff;
}

.c0 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  padding: 30px;
  text-align: center;
  background: #f7f7f7;
  margin: 20px;
  box-shadow: 0 1.5px 4px rgba(0,0,0,0.12),0 1.5px 6px rgba(0,0,0,0.06);
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0:hover {
  box-shadow: 0 2.5px 6px rgba(0,0,0,0.16),0 2.5px 6px rgba(0,0,0,0.13);
}

.c1 {
  fill: #212122;
  width: 40px;
  height: 40px;
  display: inline-block;
}

.c2 {
  margin-top: 30px;
}

.c3 {
  margin-top: 20px;
}

.c4 {
  margin-top: auto;
}

@media (min-width:62em) {
  .c0 {
    width: auto;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

<div
  className="c0"
>
  <span
    className="isvg loading c1"
  />
  <h3
    className="c2"
  >
    Title text
  </h3>
  <p
    className="c3"
  >
    Sub text
  </p>
  <Link
    className="c4 c5"
    to="/https://example.com"
  >
    <span
      className="c6"
    >
      Click me
    </span>
  </Link>
</div>
`;

exports[`renders correctly 1`] = `
.c6 {
  display: inline-block;
}

.c5 {
  display: inline-block;
  text-align: center;
  padding: 10px 1em;
  font-weight: normal;
  background-color: #ea232d;
  border: none;
  color: #fff;
  width: 100%;
}

.c5:hover {
  color: #fff;
}

.c0 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  padding: 30px;
  text-align: center;
  background: #f7f7f7;
  margin: 20px;
  box-shadow: 0 1.5px 4px rgba(0,0,0,0.12),0 1.5px 6px rgba(0,0,0,0.06);
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c0:hover {
  box-shadow: 0 2.5px 6px rgba(0,0,0,0.16),0 2.5px 6px rgba(0,0,0,0.13);
}

.c1 {
  fill: #212122;
  width: 40px;
  height: 40px;
  display: inline-block;
}

.c2 {
  margin-top: 30px;
}

.c3 {
  margin-top: 20px;
}

.c4 {
  margin-top: auto;
}

@media (min-width:62em) {
  .c0 {
    width: auto;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

<div
  className="c0"
>
  <span
    className="isvg loading c1"
  />
  <h3
    className="c2"
  >
    Title text
  </h3>
  <p
    className="c3"
  >
    Sub text
  </p>
  <Link
    className="c4 c5"
    to="/https://example.com"
  >
    <span
      className="c6"
    >
      Click me
    </span>
  </Link>
</div>
`;

exports[`renders correctly 2`] = `
.c8 {
  display: inline-block;
}

.c7 {
  display: inline-block;
  text-align: center;
  padding: 10px 1em;
  font-weight: normal;
  background-color: #ea232d;
  border: none;
  color: #fff;
  width: 100%;
}

.c7:hover {
  color: #fff;
}

.c2 {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
  padding: 30px;
  text-align: center;
  background: #f7f7f7;
  margin: 20px;
  box-shadow: 0 1.5px 4px rgba(0,0,0,0.12),0 1.5px 6px rgba(0,0,0,0.06);
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c2:hover {
  box-shadow: 0 2.5px 6px rgba(0,0,0,0.16),0 2.5px 6px rgba(0,0,0,0.13);
}

.c3 {
  fill: #212122;
  width: 40px;
  height: 40px;
  display: inline-block;
}

.c4 {
  margin-top: 30px;
}

.c5 {
  margin-top: 20px;
}

.c6 {
  margin-top: auto;
}

.c0 {
  max-width: 1140px;
  margin: 0 auto;
  padding: 0 20px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media (min-width:62em) {
  .c2 {
    width: auto;
    -webkit-flex: 1;
    -ms-flex: 1;
    flex: 1;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <span
        className="isvg loading c3"
      />
      <h3
        className="c4"
      >
        Title text
      </h3>
      <p
        className="c5"
      >
        Sub text
      </p>
      <Link
        className="c6 c7"
        to="/https://example.com"
      >
        <span
          className="c8"
        >
          Click me
        </span>
      </Link>
    </div>
  </div>
</div>
`;
